# project

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
cert/: cert.crt  key.pem  pem.pem  server.pem
components/DS1307/: ds1307.c
components/DS1307/include/: ds1307.h
components/LM75/: lm75.c
components/LM75/include/: lm75.h
components/display/: fontx.c  ili9340.c
components/display/include/: ili9340.h
components/floatstring/: floatstring.c
components/floatstring/include/: floatstring.h
components/led_strip/: led_strip_rmt_ws2812.c
components/led_strip/include/: led_strip.h
components/myModule/: module.c
components/myServer/: CMakeLists.txt  connect.c  connect.h  myServer.c  myServer.h  ntp_time.c  ntp_time.h  toggleLed.c  toggleLed.h
components/resetBtn/: CMakeLists.txt  resetBtn.c  resetBtn.h
components/sendRest/: CMakeLists.txt  send_rest.c  send_rest.h
components/sendmqtt/: CMakeLists.txt  sendmqtt.c  sendmqtt.h
main/: CMakeLists.txt  main.c
site/src/: app.html
site/src/routes/: __layout.svelte  ap-to-sta.svelte  index.svelte  proj-data.svelte
site/src/routes/api/: [route].ts
